app/_scss/globals/_mixins.scss
/// Vertical Centering
/// @group styling
/// @example .slide-content { @include vertical-center(); }
@mixin vertical-center($center: 50%) {
  position: relative;
  top: $center;
  transform: translateY(-50%);
}

/// Responsive Left/Right Padding
/// @group styling
///	@param $xl - left and right padding above `$width-lg`
///	@param $lg - left and right padding above `$width-md`
///	@param $md - left and right padding above `$width-sm`
///	@param $sm - left and right padding above `$width-xs`
///	@param $xs - left and right padding below `$width-xs`
@mixin lr-padding($xl: 20px, $lg: 20px, $md: 20px, $sm: 20px, $xs: 20px) {
  padding-left: $xl;
  padding-right: $xl;
  @media screen and (max-width: $width-lg) {
    padding-left: $lg;
    padding-right: $lg;
  }
  @media screen and (max-width: $width-md) {
    padding-left: $md;
    padding-right: $md;
  }
  @media screen and (max-width: $width-sm) {
    padding-left: $sm;
    padding-right: $sm;
  }
  @media screen and (max-width: $width-xs) {
    padding-left: $xs;
    padding-right: $xs;
  }
}

/// Parallax background
/// Sets the background image, cover, no-repeat and center for best effect when using the "parallax" canvas class
/// @group effects
/// @example
@mixin parallax-background() {
  background-position: center center;
  background-size: cover;
  background-repeat: none;
}

/// Hover Effect - Plus Sign with Darken
/// @group effects
@mixin hover-plus() {
  margin: 0 auto;
  display: inline-block;
  position: relative;
  &:hover:after {
    content: "+";
    position: absolute;
    top: 50%;
    color: white;
    font-size: 60px;
    left: 50%;
    margin-left: -17px;
    margin-top: -45px;
    z-index: 11;
  }
  &:hover:before {
    content: " ";
    display: block;
    position: absolute;
    top: 0px;
    width: 100%;
    height: 100%;
    z-index: 10;
    background-color: rgba(0, 0, 0, 0.37);
  }
}

/// Set Link Color - sets the color of a link, and its hover state
/// @group styling
/// @param $color
@mixin link-color($color) {
  color: $color;
  &:hover {
    color: $color;
  }
}

/// Styling for the Birdeye Reviews Footer
/// @group reviews
/// @example #section
@mixin birdeye-footer() {
  .bf-dv {
    padding-top: 30px;
    padding-bottom: 60px;
    color: #FFF !important;
    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
  }
  .bf-pro {
    color: #FFF !important;;
  }
}

/// Social Media Link mixin
/// @group footer
/// @param $name - name of the social media site, such as 'google', that matches the html class names
/// @example #section-footer { @include social-media-link('facebook'); }
@mixin social-media-link($name) {
  a.si-#{$name} {
    display: inline-block;
    margin-right: 20px;
    &:hover {
      text-decoration: none;
    }
  }
  .icon-#{$name} {
    color: white;
    font-size: 25px;
    width: 37px;
    text-align: center;
    border-radius: 8px;
    @media (max-width: $width-sm) {
      float: none;
      margin-right: auto;
    }
  }
}

